# SimpleRayTracer

./: .gitignore  CMakeLists.txt  README  cmake_install.cmake  simple.scene  tracer.cpp
data/: floor.scene  monkey.scene  room.mtl  simple.scene  specularTest.scene
display/: fragment.glsl  shaderutil.cpp  simple.cpp  simple.hpp  vertex.glsl
geometry/: bound.cpp  boundTree.cpp  circle.cpp  intersection.hpp  loader.cpp  plane.cpp  ray.hpp  triangle.cpp
scene/: camera.cpp  light.hpp  loader.cpp  material.hpp  object.hpp  scenegraph.hpp
